# animanga-cli-uc

./: README.md  pyproject.toml
animanga_cli_uc/: __main__.py  jikan_calls.py  run_cli.py  run_curses.py  text_processing.py
