[tool.poetry]
name = "animanga-cli-uc"
version = "0.1.0"
description = "Search for manga and anime in the command line. Using the Unofficial Jikan API."
authors = ["Pedro Juan Royo <pedro.juan.royo@gmail.com>"]
readme = "README.md"
#packages = [{include = "animanga_cli_uc"}]

[tool.poetry.dependencies]
python = "^3.11"

#[tool.poetry.scripts]
#animanga = "animanga_cli_uc.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
